clipping fix

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -85,6 +85,7 @@ header
     margin-right: 2vw
     will-change: font-weight, opacity
     white-space: nowrap
+    width: 100%
 
     @include mobile
       font-size: clamp(3rem, 14vw, 15rem)
